--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+aiohttp = "*"
+beautifulsoup4 = "*"
+asyncio = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
