changed the connection string

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ aiohttp = "*"
 beautifulsoup4 = "*"
 asyncio = "*"
 psycopg2-binary = "*"
+pymongo = {extras = ["srv"], version = "*"}
 
 [dev-packages]
 
