--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/setup-python@v2.7.0 
+        uses: actions/checkout@v3 
 
       - name: Set up Python
-        uses: actions/setup-python@v2.7.0 
+        uses: actions/setup-python@v2
         with:
           python-version: '3.x'
 
