--- a/github/workflows/update_anime_data.yml
+++ b/github/workflows/update_anime_data.yml
@@ -14,10 +14,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Updated to latest version
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4  # Updated to latest version
         with:
           python-version: '3.x'
 
@@ -28,7 +28,5 @@ jobs:
           pipenv install --deploy --ignore-pipfile
 
       - name: Run update script
-        env:
-          PASSWORD: ${{ secrets.PASSWORD }}
         run: |
           pipenv run python update.py
