--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,13 @@
-name: Update Anime Data
+name: Scheduled Anime Scraper
 
 on:
   schedule:
-    - cron: "0 12 * * *" # Runs every day at 12 noon UTC
-  workflow_dispatch: # Allows manual triggering of the workflow
+    # This cron syntax will run the job every day at 12:00 PM UTC
+    - cron: "0 12 * * *"
 
 jobs:
-  update-data:
+  scrape_anime:
     runs-on: ubuntu-latest
-
-    env:
-      PASSWORD: ${{ secrets.PASSWORD }}
 
     steps:
       - name: Checkout repository
@@ -19,16 +16,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
+          python-version: "3.9" # Specify the Python version you want to use
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pipenv
-          pipenv install --deploy --ignore-pipfile
+          pip install -r requirements.txt  # Adjust if you have a different dependency file
 
-      - name: Run update script
-        env:
-          PASSWORD: ${{ secrets.PASSWORD }}
+      - name: Run the scraper
         run: |
-          pipenv run python update.py
+          python your_script_name.py  # Replace with your actual script name
