--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Adjust if you have a different dependency file
+          pip install -r requirements.txt
 
       - name: Run the scraper
         run: |
-          python your_script_name.py  # Replace with your actual script name
+          python main.py
